--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 title: PWIM Project
 description:
   Official website and dev log for the PWIM project
+  
+baseurl: pwim-project.github.io
 
 # show_excerpts: false # set to true to show excerpts on the homepage
 
