test about with members

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author:
   name: Kristian Notari
   email: kristiannotari@icloud.com
 description: >
-  Official website and dev blog for the PWIM project
+  Official website and devlog for the PWIM project
 
 show_excerpts: true # set to true to show excerpts on the homepage
 
